[package]
name = "bmbp_bean"
version = "0.0.1"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP AUTH"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_auth"
repository = "https://github.com/bmbper/bmbp_auth"
documentation = "https://github.com/bmbper/bmbp_auth"
[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.10"
serde_repr = "0.1.19"
async-trait = "0.1.81"
tokio = { version = "1", features = ["full"] }
